doc: Update README

--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
 ** 依存関係
 
-   ivy-kibela は以下のパッケージに依存しているので事前にインストールしておいてください
+   ivy-kibela は以下のパッケージに依存しているので事前にインストールしてください
 
    - ivy :: 0.13.0
    - graphql :: 0.1.1
